// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TelephoneField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <div
        class="sc-dIvqjp iaFmok"
      >
        <span
          class="sc-bkbjAj ZmFKv"
        >
          +48
        </span>
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value="3232a"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podany numer telefonu jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="testId"
  name="telephone"
  placeholder="Numer telefonu"
  prefix="+48"
  style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
  type="tel"
  value=""
/>
`;

exports[`<TelephoneField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="telephone"
      >
        FirstName*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <span
          class="sc-bkbjAj ZmFKv"
        >
          +48
        </span>
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="FirstName"
          name="telephone"
          placeholder="Numer telefonu*"
          prefix="+48"
          required=""
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TelephoneField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="telephone"
      >
        Telephone
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <span
          class="sc-bkbjAj jvFFtO"
        >
          +48
        </span>
        <input
          class="sc-crzoUp kUQhja"
          id="testId"
          label="Telephone"
          name="telephone"
          placeholder="Numer telefonu"
          prefix="+48"
          style="border-bottom-left-radius: 0px; border-top-left-radius: 0px;"
          type="tel"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
